@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-28T16:09:27Z",
-  "count_outdated" : 4842,
-  "uniques_outdated" : 1417,
+  "timestamp" : "2023-07-29T00:42:12Z",
+  "count_outdated" : 4854,
+  "uniques_outdated" : 1426,
   "count" : 4883,
   "uniques" : 1443,
   "clones" : [
-    {
-      "timestamp": "2023-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 12 ],
-      "count_decinc": [ 11, 12 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 9 ],
-      "uniques_decinc": [ 8, 9 ]
-    },
     {
       "timestamp": "2023-07-15T00:00:00Z",
       "count": 2,
